--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,6 +206,7 @@ main {
       color: #000978; }
 
 .company {
+  padding-bottom: 40px;
   background: url("../../src/img/company/bg.png");
   background-size: cover !important; }
   .company__header {
@@ -241,39 +242,69 @@ main {
       .company .wrap__item-long {
         grid-column: 1/3;
         margin: 0 auto;
-        margin-top: -30px;
+        margin-top: 15px;
         width: 750px; }
-        .company .wrap__item-long__text {
-          position: relative;
-          margin-top: 80px;
-          margin-left: 65px;
-          font-size: 20px;
-          color: #22339E; }
-          .company .wrap__item-long__text::before {
-            content: '';
-            position: absolute;
-            width: 470px !important;
-            height: 5px;
-            top: -34% !important;
-            left: 15% !important;
-            border-radius: 10px;
-            background-color: red; }
-        .company .wrap__item-long img {
-          height: 100%;
-          width: auto; }
-    .company .wrap .card-company__text {
-      position: relative;
-      margin-top: 80px;
-      margin-left: 65px;
-      font-size: 20px;
-      color: #22339E; }
-    .company .wrap .card-company__text-check {
-      display: inline-block;
-      position: absolute;
-      top: -30%;
-      width: 30px;
-      height: 30px;
-      background: url("../../src/img/company/icons/check.png");
-      background-size: cover; }
-    .company .wrap .card-company__text-red {
-      color: #FF182F; }
+      .company .wrap__item img {
+        height: 100%;
+        width: auto; }
+  .company .card-company__text {
+    position: relative;
+    margin-top: 80px;
+    margin-left: 65px;
+    font-size: 20px;
+    color: #22339E; }
+  .company .card-company__text-check {
+    display: inline-block;
+    position: absolute;
+    top: -30%;
+    width: 30px;
+    height: 30px;
+    background: url("../../src/img/company/icons/check.png");
+    background-size: cover; }
+  .company .card-company__text-red {
+    color: #FF182F; }
+
+.footer {
+  min-height: 180px;
+  padding-top: 50px;
+  background-color: #FF182F;
+  color: white;
+  font-size: 22px; }
+  .footer .call {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: row; }
+    .footer .call img {
+      margin-top: 15px; }
+  .footer__item {
+    min-height: 150px; }
+  .footer img {
+    max-width: 320px;
+    margin-bottom: 100px; }
+  .footer span {
+    display: block; }
+
+.text__number {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  font-size: 34px;
+  color: #000978; }
+
+.text__lorem {
+  font-size: 16px; }
+
+.list {
+  margin-left: 90px;
+  line-height: 35px;
+  list-style-type: none;
+  color: white; }
+  .list__item {
+    margin-bottom: 5px;
+    font-size: 18px; }
+    .list__item a {
+      color: white;
+      text-decoration: none; }
+  .list__item-blue a {
+    color: #000978; }
