--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,27 +284,24 @@ main {
     margin-bottom: 100px; }
   .footer span {
     display: block; }
-
-.text__number {
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-  font-size: 34px;
-  color: #000978; }
-
-.text__lorem {
-  font-size: 16px; }
-
-.list {
-  margin-left: 90px;
-  line-height: 35px;
-  list-style-type: none;
-  color: white; }
-  .list__item {
-    margin-bottom: 5px;
-    font-size: 18px; }
-    .list__item a {
-      color: white;
-      text-decoration: none; }
-  .list__item-blue a {
+  .footer .text__number {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    font-size: 34px;
     color: #000978; }
+  .footer .text__lorem {
+    font-size: 16px; }
+  .footer .list {
+    margin-left: 90px;
+    line-height: 35px;
+    list-style-type: none;
+    color: white; }
+    .footer .list__item {
+      margin-bottom: 5px;
+      font-size: 18px; }
+      .footer .list__item a {
+        color: white;
+        text-decoration: none; }
+    .footer .list__item-blue a {
+      color: #000978; }
