--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,7 +234,7 @@ main {
         top: 20%;
         left: 50%;
         border-radius: 10px;
-        background-color: red; }
+        background-color: #FF182F; }
       .company .wrap__item .image {
         margin-top: 20px;
         height: 120px;
@@ -244,6 +244,15 @@ main {
         margin: 0 auto;
         margin-top: 15px;
         width: 750px; }
+        .company .wrap__item-long::before {
+          content: '';
+          position: absolute;
+          width: 450px;
+          height: 5px;
+          top: 15%;
+          left: 37%;
+          border-radius: 10px;
+          background-color: #FF182F; }
       .company .wrap__item img {
         height: 100%;
         width: auto; }
