--- a/src/style.scss
+++ b/src/style.scss
@@ -4,43 +4,46 @@ $bgCol: #FF182F;
 $btnBgCol0ne: #22339E;
 $btnBgColTwo: #000978;
 
-html{
+html {
   overflow-x: hidden;
 }
 
-header{
+header {
   height: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: $bgCol;
-    .logo{
-      height: 65px;
-      width: 370px;
-    }
-  .button-take{
-      width: 270px;
-      height: 75px;
-      background: linear-gradient(0deg, rgba(0,9,120,1) 0%, rgba(34,51,158,1) 100%);
-      color: white;
-      font-size: 28px;
-      text-transform: uppercase;
-      border: none;
-      border-radius: 15px;
-      font-weight: bold;
-      margin-left: 475px;
+
+  .logo {
+    height: 65px;
+    width: 370px;
+  }
+
+  .button-take {
+    width: 270px;
+    height: 75px;
+    background: linear-gradient(0deg, rgba(0, 9, 120, 1) 0%, rgba(34, 51, 158, 1) 100%);
+    color: white;
+    font-size: 28px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 15px;
+    font-weight: bold;
+    margin-left: 475px;
   }
 }
 
 // MAIN SECTION
 
-main{
+main {
   height: 730px;
   display: flex;
   background: url("../../src/img/bg-main.png");
   background-size: cover !important;
+
   .loan {
-    .option-money{
+    .option-money {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -51,117 +54,122 @@ main{
       margin-left: 300px;
     }
   }
-  
+
   .condition-sliders {
-  
-      // .condition-sliders__text
-  
-      &__text {
-        text-align: left;
-        transform: translateY(-25px);
-        font-size: 28px;
-        color: $btnBgCol0ne;
+
+    // .condition-sliders__text
+
+    &__text {
+      text-align: left;
+      transform: translateY(-25px);
+      font-size: 28px;
+      color: $btnBgCol0ne;
+    }
+
+    // .condition-sliders__value
+
+    &__value {
+      text-align: right;
+      transform: translateY(-25px);
+      font-size: 28px;
+      font-weight: bold;
+      color: $bgCol;
+    }
+
+    // .condition-sliders__button-minus
+
+    &__button-minus {
+      display: flex;
+      justify-content: center;
+      padding-top: 22px;
+      width: 70px;
+      height: 70px;
+      border: none;
+      border-radius: 50%;
+      background-color: $btnBgColTwo;
+      color: white;
+      line-height: 1px;
+      font-size: 100px;
+
+      &:focus {
+        outline: none;
       }
-  
-      // .condition-sliders__value
-  
-      &__value {
-        text-align: right;
-        transform: translateY(-25px);
-        font-size: 28px;
-        font-weight: bold;
-        color: $bgCol;
+    }
+
+    // .condition-sliders__input
+
+    &__input {
+      -webkit-appearance: none;
+      margin-top: 25px;
+      margin-left: 30px;
+      margin-right: 30px;
+      width: 370px;
+      height: 20px;
+      padding: 0px;
+      background: linear-gradient(90deg, $btnBgColTwo 1%, $bgCol 100%);
+      border-radius: 15px;
+
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        padding: 9px;
+        width: 50px;
+        height: 50px;
+        background-image: url("../../src/img/scroll.png");
+        background-size: cover;
+        cursor: pointer;
       }
-  
-      // .condition-sliders__button-minus
-  
-      &__button-minus {
-        display: flex;
-        justify-content: center;
-        padding-top: 22px;
-        width: 70px;
-        height: 70px;
-        border: none;
-        border-radius: 50%;
-        background-color: $btnBgColTwo;
-        color: white;
-        line-height: 1px;
-        font-size: 100px;
-        &:focus{
-          outline: none;
-        }
+
+      &:focus {
+        outline: none;
       }
-  
-      // .condition-sliders__input
-      
-      &__input {
-        -webkit-appearance: none; 
-        margin-top: 25px;
-        margin-left: 30px;
-        margin-right: 30px;
-        width: 370px;
-        height: 20px;
-        padding: 0px;
-        background: linear-gradient(90deg, $btnBgColTwo 1%, $bgCol 100%);
-        border-radius: 15px;
-        &::-webkit-slider-thumb {
-          -webkit-appearance: none;
-          padding: 9px;
-          width: 50px;
-          height: 50px;
-          background-image: url("../../src/img/scroll.png");
-          background-size: cover;
-          cursor: pointer;
-        }
-        &:focus{
-          outline: none;
-        }
+    }
+
+    // .condition-sliders__button-plus
+
+    &__button-plus {
+      display: flex;
+      justify-content: center;
+      padding-top: 27px;
+      width: 70px;
+      height: 70px;
+      border: none;
+      border-radius: 50%;
+      background-color: $bgCol;
+      color: white;
+      line-height: 1px;
+      font-size: 70px;
+
+      &:focus {
+        outline: none;
       }
-  
-      // .condition-sliders__button-plus
-  
-      &__button-plus {
-        display: flex;
-        justify-content: center;
-        padding-top: 27px;
-        width: 70px;
-        height: 70px;
-        border: none;
-        border-radius: 50%;
-        background-color: $bgCol;
-        color: white;
-        line-height: 1px;
-        font-size: 70px;
-        &:focus{
-          outline: none;
-        }
-      }
+    }
   }
+
   .calculations {
     display: flex;
     justify-content: center;
     flex-direction: column;
 
-      &__text {
-        font-size: 25px;
-        color: $btnBgColTwo;
-        margin: 0;
-        padding: 0;
-      }
-  
-      // .calculations__button-take-money
-      &__button-take-money {
-        width: 575px;
-        height: 70px;
-        margin-top: 40px;
-        border: none;
-        border-radius: 15px;
-        background: $bgCol;
-        color: white;
-        font-size: 28px;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
+    &__text {
+      font-size: 25px;
+      color: $btnBgColTwo;
+      margin: 0;
+      padding: 0;
+    }
+
+    // .calculations__button-take-money
+    &__button-take-money {
+      width: 575px;
+      height: 70px;
+      margin-top: 40px;
+      border: none;
+      border-radius: 15px;
+      background: $bgCol;
+      color: white;
+      font-size: 28px;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
   }
 }
 
@@ -170,31 +178,36 @@ main{
 .advantages {
   background-color: #E5E9F4;
   padding-bottom: 100px;
-}
-.features {
-  display: flex;
-  justify-content: center;
-  padding-top: 100px;
-		// .features__item
-		&__item {
+  .features {
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+  
+    // .features__item
+    &__item {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
       margin-top: 0;
       min-width: 300px;
-      img{
+  
+      img {
         width: auto;
         height: 150px;
         max-height: 160px;
         margin-bottom: 40px;
       }
-      span{
+  
+      span {
         color: #2431A5;
         font-size: 23px;
       }
-		}
+    }
+  }
 }
+
+
 
 
 // SECTION ABOUT
@@ -204,8 +217,8 @@ main{
   margin-bottom: 100px;
   // .about__arrow
 
-  &__marks{
-    &-up{
+  &__marks {
+    &-up {
       position: absolute;
       width: 70px;
       height: 40px;
@@ -214,7 +227,8 @@ main{
       top: -18%;
       left: 2%;
     }
-    &-down{
+
+    &-down {
       position: absolute;
       width: 70px;
       height: 40px;
@@ -224,7 +238,9 @@ main{
       top: 92%;
       left: 78%;
     }
-  }  // .about__arrow-prev
+  }
+
+  // .about__arrow-prev
 
   &__arrow-prev {
     position: absolute;
@@ -260,6 +276,7 @@ main{
     text-align: center;
     text-transform: uppercase;
     color: $btnBgColTwo;
+
     h2 {
       font-size: 40px;
       font-weight: bold;
@@ -267,8 +284,10 @@ main{
   }
 
 }
+
 .carousel {
   display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
   // .carousel__item
@@ -280,7 +299,8 @@ main{
     width: 600px;
     min-height: 300px;
     margin-left: 10px;
-    img{
+
+    img {
       width: 120px;
       height: 120px;
       min-width: 120px;
@@ -288,11 +308,13 @@ main{
       margin-right: 50px;
       margin-top: 10px;
     }
-    p{
+
+    p {
       font-size: 22px;
       color: $bgCol;
     }
-    span{
+
+    span {
       font-size: 22px;
       font-style: italic;
       color: $btnBgColTwo;
@@ -310,7 +332,9 @@ main{
   // .company__features
 
   &__features {
+    width: 100%;
   }
+
   &__header {
     padding-top: 100px;
     margin-bottom: 40px;
@@ -319,92 +343,99 @@ main{
     font-size: 34px;
     text-align: center;
     text-transform: uppercase;
-}
-.wrap {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  // .wrap__item
-  &__item {
-    position: relative;
-    display: flex;
-    min-height: 250px;
-    width: 570px;
-    margin-left: 20px;
-    &::before{
-      content: '';
-      position: absolute;
-      width: 250px;
-      height: 5px;
-      top: 20%;
-      left: 50%;
-      border-radius: 10px;
-      background-color: $bgCol;
-      
-    }
-    .image{
-      margin-top: 20px;
-      height: 120px;
-      min-width: 125px;
-    }
-    &-long{
-      grid-column: 1/3;
-      margin: 0 auto;
-      margin-top: 15px;
-      width: 750px;
-      &::before{
+  }
+
+  .wrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    // .wrap__item
+    &__item {
+      position: relative;
+      display: flex;
+      min-height: 250px;
+      max-width: 570px;
+      margin-left: 20px;
+
+      &::before {
         content: '';
         position: absolute;
-        width: 450px;
+        width: 250px;
         height: 5px;
-        top: 15%;
-        left: 37%;
+        top: 20%;
+        left: 50%;
         border-radius: 10px;
         background-color: $bgCol;
-        
+
+      }
+
+      .image {
+        margin-top: 20px;
+        height: 120px;
+        min-width: 125px;
+      }
+
+      &-long {
+        grid-column: 1/3;
+        margin: 0 auto;
+        margin-top: 15px;
+        width: 750px;
+
+        &::before {
+          content: '';
+          position: absolute;
+          width: 400px;
+          height: 5px;
+          top: 15%;
+          left: 45%;
+          border-radius: 10px;
+          background-color: $bgCol;
+
+        }
+      }
+
+      img {
+        height: 100%;
+        width: auto;
       }
     }
-    img{
-      height: 100%;
-      width: auto;
+
+    // .wrap__item-long
+  }
+
+  .card-company {
+
+    // .card-company__text
+
+    &__text {
+      position: relative;
+      margin-top: 80px;
+      margin-left: 65px;
+      font-size: 20px;
+      color: $btnBgCol0ne;
+    }
+
+    // .card-company__text-check
+
+    &__text-check {
+      display: inline-block;
+      position: absolute;
+      top: -30%;
+      width: 30px;
+      height: 30px;
+      background: url('../../src/img/company/icons/check.png');
+      background-size: cover;
+      // background-color: red;
+    }
+
+    // .card-company__text-lorem
+
+    &__text-lorem {}
+
+    &__text-red {
+      color: $bgCol;
     }
   }
-
-  // .wrap__item-long
-}
-.card-company {
-
-  // .card-company__text
-
-  &__text {
-    position: relative;
-    margin-top: 80px;
-    margin-left: 65px;
-    font-size: 20px;
-    color: $btnBgCol0ne;
-  }
-
-  // .card-company__text-check
-
-  &__text-check {
-    display: inline-block;
-    position: absolute;
-    top: -30%;
-    width: 30px;
-    height: 30px;
-    background: url('../../src/img/company/icons/check.png');
-    background-size: cover;
-    // background-color: red;
-  }
-
-  // .card-company__text-lorem
-
-  &__text-lorem {
-  }
-
-  &__text-red{
-    color: $bgCol;
-  }
-}
 }
 
 // SECTION FOOTER
@@ -417,74 +448,217 @@ main{
   font-size: 22px;
 
   // .footer__item
-  .call{
+  .call {
     display: flex;
     justify-content: center;
     align-items: start;
     flex-direction: row;
-    img{
+
+    img {
       margin-top: 15px;
     }
   }
+
   &__item {
     min-height: 150px;
   }
-  img{
+
+  img {
     max-width: 320px;
     margin-bottom: 100px;
   }
-  span{
+
+  span {
     display: block;
   }
 
   // .footer__item-list
 
-  &__item-list {
-  }
+  &__item-list {}
 
-.text {
+  .text {
 
-  // .text__number
+    // .text__number
 
-  &__number {
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-    font-size: 34px;
-    color: $btnBgColTwo;
-  }
-
-  // .text__lorem
-
-  &__lorem {
-    font-size: 16px;
-  }
-}
-.list {
-  margin-left: 90px;
-  line-height: 35px;
-  list-style-type: none;
-  color: white;
-
-  // .list__item
-
-  &__item {
-    margin-bottom: 5px;
-    font-size: 18px;
-    a {
-      color: white;
-      text-decoration: none;
-    }
-  }
-  // .list__item-blue
-
-  &__item-blue {
-    a {
+    &__number {
+      margin: 0;
+      padding: 0;
+      font-weight: bold;
+      font-size: 34px;
       color: $btnBgColTwo;
     }
+
+    // .text__lorem
+
+    &__lorem {
+      font-size: 16px;
+    }
+  }
+
+  .list {
+    margin-left: 90px;
+    line-height: 35px;
+    list-style-type: none;
+    color: white;
+
+    // .list__item
+
+    &__item {
+      margin-bottom: 5px;
+      font-size: 18px;
+
+      a {
+        color: white;
+        text-decoration: none;
+      }
+    }
+
+    // .list__item-blue
+
+    &__item-blue {
+      a {
+        color: $btnBgColTwo;
+      }
+    }
   }
 }
+
+
+// ADAPTIVE
+
+// TABLET
+
+
+@media(max-width:1024px) {
+  header {
+    height: auto;
+
+    .header {
+      .logo {
+        height: 50px;
+        margin-left: 10px;
+        margin-top: 50px;
+        margin-bottom: 25px;
+      }
+
+      .button-take {
+        margin-top: -90px;
+        margin-left: 600px;
+        font-size: 23px;
+      }
+    }
+  }
+
+  .loan {
+      // .loan__item
+    &__item {}
+    .option-money {
+      margin: 55px auto 75px auto !important;
+    }
+  }
+  .calculations {
+    // .calculations__button-take-money
+
+    &__button-take-money {
+      width: 100% !important;
+    }
+  }
+
+
+  .advantages {
+  .features {
+      // .features__item
+      &__item {
+        span {
+          font-size: 20px !important;
+        }
+      }
+  }
+
 }
 
+.carousel {
 
+  p{
+    font-size: 20px;
+  }
+		&__item {
+      span{
+        font-size: 18px;
+      }
+      img{
+        width: 80px;
+        height: 80px;
+        min-width: 80px;
+        min-height: 80px;
+        margin-right: 10px;
+      }
+		}
+}
 
+.company {
+  .card-company{
+    &__text{
+      font-size: 19px;
+      margin-top: 50px;
+      margin-left: 55px;
+      &-check{
+        top: -15%;
+        left: -5%;
+      }
+    }
+  }
+
+  .wrap {
+
+    // .wrap__item
+    &__item {
+      .image{
+        height: 100px;
+        min-width: 80px;
+      }
+      &::before{
+        top: 10%;
+        left: 50%;
+        width: 170px;
+      }
+    }
+  
+    // .wrap__item-long
+  
+    &__item-long {
+      &::before{
+        top: 15%;
+        left: 30%;
+        width: 350px;
+      }
+    }
+  }
+}
+
+.footer {
+  img {
+    max-width: 220px;
+  }
+  
+  .text {
+    // .text__number
+    &__number {
+      font-size: 20px;
+    }
+  
+    // .text__lorem
+  
+    &__lorem {
+      font-size: 14px;
+    }
+}
+
+.list{
+  line-height: 20px;
+  margin: 0;
+}
+
+}
+
+}
